fix spacing on paginator cards

--- a/src/sass/components/supportingtakeaway.scss
+++ b/src/sass/components/supportingtakeaway.scss
@@ -12,7 +12,7 @@
 }
 
 .takeawayCardContent {
-	padding-top: 16px;
+	padding-top: 24px;
 	padding-left: 12px;
 	padding-right: 12px;
 }
@@ -30,7 +30,8 @@
 .takeawayGray {
 	color: #666666;
 	position: relative;
-	top: -12px;
+	top: -14px;
+	font-weight: lighter;
 }
 
 .centerTakeaway {
